tests/errors/sem.invalid-label.nonconst-call.or
main :: () -> void {
    add := (a: int, b: int) -> int {
        return a + b;
    };

    add(a: 10, 10);
};
